gatekeeper/templates/k8sdisallowhostnetwork-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.hostNetwork == true

        msg := "hostNetwork=true is forbidden"
      }
