gatekeeper/templates/k8sdisallowlatesttag-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8sdisallowlatesttag

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        endswith(container.image, ":latest")

        msg := sprintf(
          "Container %v uses forbidden tag latest",
          [container.name]
        )
      }
