gatekeeper/templates/k8sdisallowrootuser-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrootuser

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRootUser

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8sdisallowrootuser

      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.securityContext.runAsUser == 0

        msg := "runAsUser 0 is forbidden"
      }
