gatekeeper/templates/k8srequiredresources-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources

spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8srequiredresources

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.limits

        msg := sprintf(
          "Container %v must define resources.limits",
          [container.name]
        )
      }
